ctr: Update learner container

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,11 +1,257 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building a Motorized Maze Rig"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing all required libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2 as cv\n",
+    "from matplotlib import pyplot as plt\n",
+    "from ipywidgets import interactive\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load image and calibrate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = cv.imread('images/maze01.jpg')\n",
+    "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
+    "plt.imshow(img)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Calibration image](./images/my_photo01.jpg)\n",
+    "![Calibration image](./images/my_photo05.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calibration = np.load('rig/calib.npz')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mtx = calibration['mtx']\n",
+    "dist = calibration['dist']\n",
+    "rvecs = calibration['rvecs']\n",
+    "tvecs = calibration['tvecs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h, w = img.shape[:2]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create camera matrix for calibration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newCameraMtx, roi = cv.getOptimalNewCameraMatrix(mtx, dist, (w, h), 1, (w, h))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "undistortedImg = cv.undistort(img, mtx, dist, None, newCameraMtx)\n",
+    "plt.imshow(undistortedImg)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find corner HSV range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hsv_img = cv.cvtColor(undistortedImg, cv.COLOR_RGB2HSV)\n",
+    "def mask(h, sl, vl, sh, vh):\n",
+    "  m = cv.inRange(\n",
+    "    hsv_img,\n",
+    "    (h - 10, sl, vl),\n",
+    "    (h + 10, sh, vh),\n",
+    "  )\n",
+    "  plt.imshow(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interactive(\n",
+    "  mask,\n",
+    "  h=(0, 179),\n",
+    "  sl=(0, 255),\n",
+    "  vl=(0, 255),\n",
+    "  sh=(0, 255),\n",
+    "  vh=(0, 255),\n",
+    ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create mask for corners"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Change to found values\n",
+    "CORNER_LOWER = (0, 0, 0)\n",
+    "CORNER_UPPER = (179, 255, 255)\n",
+    "\n",
+    "# TODO: Create mask for corners"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find corners in ROI"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find corners in regions of interest.\n",
+    "\n",
+    "![Corners](./images/corners_img.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fix perspective of the image"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By fixing image perspective we both crop it and change the perspective so it is basically a matrix which can be easily parsed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map the maze"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have an image with fixed perspective, we can create a map of the maze. This could be a simple matrix whose values are classes of the fields of the maze. Last thing to do before we solve the maze is to classify each field."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solving the maze"
+   ]
   }
  ],
  "metadata": {
